--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(125, 198, 205);
+    background: rgb(219, 157, 234);
     color: rgb(45, 45, 45);
     padding: 10px;
     font-family: Arial, sans-serif;
@@ -12,16 +12,17 @@ body {
 
 /* navigation menu */
 nav {
-    background: rgb(239, 80, 41);
+    background: #e9b3e3;
     margin: 0 auto;
     display: flex;
     padding: 10px;
+    margin-bottom: 20px;
 }
 
 h1 {
     display: flex;
     align-items: center;
-    color: white;
+    color: #b0deeb;
     flex: 1;
     margin: 0;
 }
@@ -40,12 +41,12 @@ h1 {
 
 a {
     text-decoration: none;
-    color: #fff;
+    color: #b0deeb;
 }
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
+    background: rgb(233, 219, 245);
     display: flex;
     margin-top: 20px;
 }
@@ -66,7 +67,7 @@ main {
 
 /* interests section styles */
 #interests {
-    border: 4px silver ridge;
+    border: 4px rgb(214, 196, 235) ridge;
     padding: 8px;
     margin-top: 20px;
 }
